had mistakes with my links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <div class="main">
         <h2>Hi, my name is Nihitha</h2>
-        <img src="static/myphoto.jpeg" alt="A picture of me">
+        <img src="static/myphoto.jpg" alt="A picture of me">
         <p id="intro">Welcome to my personal website! My name is Nihitha Sunil and I am studying Information Systems and Business Administration at Carnegie Mellon University. Here you will find my CV, contact information, and fun things about me.</p>
 
     </div>  
