--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="static/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="author" content="Your name">
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
     <meta name="description" content="Your name professional website">
     <title>Your name</title>
 </head>
-<body style="font-family: Arial">
-    <header style="color:blue; background:lightblue">
-        <h1>Nihitha Sunil</h1>
+<body>
+    <header>
+        <h1 id="webname">Nihitha Sunil</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="views/cv.html">CV</a>
