--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <header>
         <h1 id="webname">Nihitha Sunil</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="views/cv.html">CV</a>
-            <a href="views/contact.html">Contact Me</a>
-            <a href="views/fun.html">For Fun</a>
-        </nav>      
+            <a class="nav-links" href="index.html">Home</a> |
+            <a class="nav-links" href="views/cv.html">CV</a> |
+            <a class="nav-links" href="views/contact.html">Contact Me</a> |
+            <a class="nav-links" href="views/fun.html">For Fun</a>
+        </nav>           
         
         
     </header>
