--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
     </header>
     <div class="main">
-        <h2 id="greeting">Hi, my name is Nihitha</h2>
+        <h2 id="greeting"></h2>
         <img src="static/myphoto.jpg" alt="A picture of me" width = "200">
         <p id="intro">Welcome to my personal website! My name is Nihitha Sunil and I am studying Information Systems and Business Administration at Carnegie Mellon University. Here you will find my CV, contact information, and fun things about me.</p>
 
