--- a/lab 4/index.html
+++ b/lab 4/index.html
@@ -10,11 +10,9 @@
     <meta name="description" content="Your name professional website">
     <title>Your name</title>
     <script src="./static/script.js" defer></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
     
 </head>
-<body onload="addYear()">
+<body>
     <header>
         <h1 id="webname">Nihitha Sunil</h1>
         <nav>
@@ -29,18 +27,13 @@
     <div class="main">
         <h2 id="greeting">Hi, my name is Nihitha</h2>
         <img src="static/myphoto.jpg" alt="A picture of me" width = "200">
-        <div class= "classA">
-            <span id="shortIntro">Welcome to my personal website! My name is Nihitha Sunil and I am studying Information Systems and Business Administration at Carnegie Mellon University.</span>
-            <span id="readMore">Read more...</span>
-            <span id="longIntro" style="display:none;"><br>Welcome to my personal website! My name is Nihitha Sunil and I am studying Information Systems and Business Administration at Carnegie Mellon University. Here you will find my CV, contact information, and fun things about me.</span>
-            <span id="readLess" style="display:none;">Read less...</span>
-        </div>
+        <p id="intro">Welcome to my personal website! My name is Nihitha Sunil and I am studying Information Systems and Business Administration at Carnegie Mellon University. Here you will find my CV, contact information, and fun things about me.</p>
 
     </div>  
 
     <footer>
-        <p id = "copyYear"> &copy; Designed and coded by Nihitha Sunil </p>
-    </footer>
+            <p>© 2025 designed and coded by Nihitha Sunil.</p>
+        </footer>
     
 </body>
 </html>
